# jobspy-mcp

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
src/jobspy_mcp/: __main__.py  serializer.py  server.py
tests/: test_server.py
